# software-scanner-native

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-native.sh  build-opencv-android.sh  build-opencv-linux.sh  build.gradle  settings.gradle
cmake/: java.cmake
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
opencv/src/main/: AndroidManifest.xml
opencv/src/main/java/org/opencv/android/: CameraActivity.java  CameraBridgeViewBase.java  OpenCVLoader.java
opencv/src/main/java/org/opencv/calib3d/: Calib3d.java  StereoBM.java  StereoMatcher.java  StereoSGBM.java
opencv/src/main/java/org/opencv/core/: Algorithm.java  Core.java  TickMeter.java
opencv/src/main/java/org/opencv/dnn/: ClassificationModel.java  DetectionModel.java  DictValue.java  Dnn.java  KeypointsModel.java  Layer.java  Model.java  Net.java  SegmentationModel.java
opencv/src/main/java/org/opencv/features2d/: AKAZE.java  AgastFeatureDetector.java  BFMatcher.java  BOWImgDescriptorExtractor.java  BOWKMeansTrainer.java  BOWTrainer.java  BRISK.java  DescriptorMatcher.java  FastFeatureDetector.java  Feature2D.java  Features2d.java  FlannBasedMatcher.java  GFTTDetector.java  KAZE.java  MSER.java  ORB.java  Params.java  SIFT.java  SimpleBlobDetector.java
opencv/src/main/java/org/opencv/imgcodecs/: Imgcodecs.java
opencv/src/main/java/org/opencv/imgproc/: CLAHE.java  GeneralizedHough.java  GeneralizedHoughBallard.java  GeneralizedHoughGuil.java  Imgproc.java  LineSegmentDetector.java  Subdiv2D.java
opencv/src/main/java/org/opencv/ml/: ANN_MLP.java  Boost.java  DTrees.java  EM.java  KNearest.java  LogisticRegression.java  NormalBayesClassifier.java  ParamGrid.java  RTrees.java  SVM.java  SVMSGD.java  StatModel.java  TrainData.java
opencv/src/main/java/org/opencv/objdetect/: CascadeClassifier.java  HOGDescriptor.java  Objdetect.java  QRCodeDetector.java
opencv/src/main/java/org/opencv/photo/: AlignExposures.java  AlignMTB.java  CalibrateCRF.java  CalibrateDebevec.java  CalibrateRobertson.java  MergeDebevec.java  MergeExposures.java  MergeMertens.java  MergeRobertson.java  Photo.java  Tonemap.java  TonemapDrago.java  TonemapMantiuk.java  TonemapReinhard.java
opencv/src/main/java/org/opencv/utils/: Converters.java
opencv/src/main/java/org/opencv/video/: BackgroundSubtractorKNN.java  BackgroundSubtractorMOG2.java  DISOpticalFlow.java  FarnebackOpticalFlow.java  KalmanFilter.java  SparsePyrLKOpticalFlow.java  VariationalRefinement.java  Video.java
opencv/src/main/java/org/opencv/videoio/: VideoCapture.java  VideoWriter.java  Videoio.java
scanner-jni/: README.md  build.gradle
scanner-jni/src/androidTest/java/com/github/dawidkski/scanner/jni/: ScannerInstrumentedTest.java
scanner-jni/src/main/: AndroidManifest.xml
scanner-jni/src/main/java/com/github/dawidkski/scanner/jni/: Scanner.java  ScannerJNI.java
scanner-native/: CMakeLists.txt  README.md
scanner-native/cmake/: ScannerConfig.cmake.in
scanner-native/include/scanner/: img_utils.h  scanner.hpp
scanner-native/include/scanner/jni/: scanner.hpp
scanner-native/java/: scanner.i
scanner-native/src/: scanner.cpp
scanner-native/tests/: test_scanner.cpp
scanner/java/: CMakeLists.txt  scanner.i
scripts/: build-opencv-linux.sh  build-scanner-android.sh  build-scanner-host.sh
